# remedy

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: config.rs  getmail.rs  main.rs
