[package]
name = "remedy"
version = "0.1.0"
authors = ["Tomas Jasek <tomsik68@posteo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maildir = "0.4"
toml = "0.5"
imap = "2.3"
tokio = {version="1", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.7"
native-tls = "0.2"
quick-error = "2.0"
shlex = "0.1"
futures = "0.3"
anyhow = "1"
